# CSCI375-oop

./: README.md
Homework 1/: thermostat.py  thermostattest.py
Homework 2/src/thermostat/: thermostat.java
Homework2/src/thermostat/: fanSpeed.java  tempType.java  thermostatTest.java
Homework3/thermostat/: fanSpeed.java  smartThermostat.java  smartThermostatTest.java  thermostat.java  thermostatMode.java  thermostatTest.java
Homework4/: Makefile
Homework4/include/: Thermostat.h  tempType.h
Homework4/src/: Thermostat.cpp  testThermostat.cpp
Homework5/: Makefile
Homework5/include/: fanSpeed.h  smartThermostat.h
Homework5/src/: smartThermostat.cpp  testSmartThermostat.cpp
Homework6/: CMakeLists.txt
Homework6/include/: Thermostat.h  smartTemperatureDevice.h  smartThermostat.h  smartWindow.h  smartWindowThermostat.h  thermostatMode.h
Homework6/src/: Thermostat.cpp  smartThermostat.cpp  smartWindow.cpp  smartWindowThermostat.cpp  testSmartWindow.cpp  testThermostat.cpp  testsmartThermostat.cpp  testsmartWindowThermostat.cpp
Homework7/src/ServantExample/: Ant.java  Ants.java  Direction.java  FastAnt.java  Movable.java  MoveServant.java  Position.java  Slug.java
Homework7/src/testServantExample/: testMoveServant.java
